Add OpenAI calendar logging with Google Calendar

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,16 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX=300
 
 APP_TIMEZONE=America/Los_Angeles
+DEFAULT_TIMEZONE=America/Los_Angeles
+
+OPENAI_API_KEY=
+OPENAI_MODEL=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
+GOOGLE_REFRESH_TOKEN=
+GOOGLE_CALENDAR_ID=primary
 
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
