Add ChatGPT Action endpoint and schema

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
 GOOGLE_REFRESH_TOKEN=
 GOOGLE_CALENDAR_ID=primary
 
+ACTION_API_TOKEN=
+
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_FROM_NUMBER=
